Bug 111801 - No hover effect in table design sidebar tab
Summary: No hover effect in table design sidebar tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Kshitij
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks: Sidebar-Properties-Table-Design
  Show dependency treegraph
 
Reported: 2017-08-14 12:24 UTC by Tamás Zolnai
Modified: 2019-09-05 11:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
How hover looks like for layout sidebar tab (89.04 KB, image/png)
2017-08-14 13:03 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-14 12:24:30 UTC
Description:
In Impress we have a table design sidebar tab displayed when cursor is in a table. It works nicely, but it has no a hover effect when mouse is moved inside the list of table designs. It used to be good if user get this kind of feedbacks.
I imagine a similar hover effect as we have for slide layout sidebar tab (click on slide to have it on the sidebar)

Steps to Reproduce:
1. Open Impress
2. Insert a table and click in it
3. On sidebar open table design tab
4. Move mouse above the different items

Actual Results:  
No hover effect shown when mouse is above the items.

Expected Results:
Any hover effect should be good here.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-14 13:03:23 UTC
Created attachment 135544 [details]
How hover looks like for layout sidebar tab
Comment 2 Telesto 2017-08-14 17:54:42 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: f1a896c71c495bdef5861eb664581507b6b9b5bb
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-13_07:38:19
Locale: nl-NL (nl_NL); Calc: CL
Comment 3 Tamás Zolnai 2017-08-14 23:11:38 UTC
Let's turn it into a easy hack. The code is here:
sd/source/ui/table/TableDesignPane.hxx
sd/source/ui/table/TableDesignPane.cxx
Comment 4 Kshitij 2017-08-22 16:11:18 UTC
Hi! I am starting to work on this bug.
Comment 5 Kshitij 2017-08-22 17:24:09 UTC
Hi ,Iam new to libreoffice .I have gone through TableDesignPane.cxx & TableDesignPane.hxx but  was unable to find something .Also I wanted to know which file to look in which hover effect in slide layout sidebar tab is implemented and how to use this information.PLease help me.
Comment 6 Tamás Zolnai 2017-08-22 18:33:02 UTC
(In reply to Kshitij from comment #5)
> Hi ,Iam new to libreoffice .I have gone through TableDesignPane.cxx &
> TableDesignPane.hxx but  was unable to find something .Also I wanted to know
> which file to look in which hover effect in slide layout sidebar tab is
> implemented and how to use this information.PLease help me.

Hi,
Some more info about the bug. As I see table style list is stored in TableDesignWidget::m_pValueSet member, which has TableValueSet type. So the change might be related to this class or this member.
A better example for checking how to use hover effect is the template manager dialog (in Impress: File -> Templates -> Manage Templates). The table manager code is here: sfx2/source/doc/templatedlg.cxx, but the hover effect handling can be found in its base class (ThumbnailView::MouseMove).
Comment 7 Tamás Zolnai 2017-08-22 19:21:09 UTC
> manager dialog (in Impress: File -> Templates -> Manage Templates). The
> table manager code is here: sfx2/source/doc/templatedlg.cxx, but the hover
> effect handling can be found in its base class (ThumbnailView::MouseMove).

Sorry, ThumbnailView is not the base class of template dialog, but the base class of its mpLocalView member. The mpLocalView handles the icons on the dialog.
Comment 8 Tamás Zolnai 2017-08-23 10:15:29 UTC
(In reply to Kshitij from comment #4)
> Hi! I am starting to work on this bug.

When you work on a bug assign it to yourself (see Assignee field) and also change the status to assigend.
Comment 9 Xisco Faulí 2017-09-23 02:27:13 UTC Comment hidden (obsolete)
Comment 10 Kshitij 2017-09-23 23:53:38 UTC
Yes,working on it .Will commit something soon.
Comment 11 Xisco Faulí 2017-10-25 02:55:07 UTC Comment hidden (obsolete)
Comment 12 Kshitij 2017-10-26 04:22:45 UTC
(In reply to Xisco Faulí from comment #11)
> A polite ping, still working on this bug?

Yeah,please refer to https://gerrit.libreoffice.org/#/c/42882/  .If you wish ,you can work in parallel with me.
Comment 13 Xisco Faulí 2017-11-26 03:24:50 UTC Comment hidden (obsolete)
Comment 14 Commit Notification 2017-11-29 17:09:59 UTC
Kshitij Pathania committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=584a73ce23706c1e0dfbf32b4dbdbe6c79fb0ef2

tdf#111801 added hover state to tabledesign sidebar

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.