tdf#111801 added hover state to tabledesign sidebar

Change-Id: I1ceb806c6423964346c97d7b1ef6dcac46698902
Reviewed-on: https://gerrit.libreoffice.org/42882
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>